src/objects/BTCSettings__c.object
<CustomObject>
    <fields>
        <fullName>API_CLIENT_ID__c</fullName>
        <label>API Client Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CLIENT_SERCRET__c</fullName>
        <label>API Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECURITY_TOKEN__c</fullName>
        <label>Security Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebAPP_URL__c</fullName>
        <label>WebAPP URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BTCSetting</label>
    <nameField>
        <label>BTCSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BTCSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>